-------------

- introduced a new GCG struct that is used as main object when interacting with GCG, similar to the SCIP struct
- Solver plugin for HiGHS. Allows user to select HiGHS as a pricing problem solver.
- new pricing solver ('gcg') that calls GCG to solve (structured) pricing problems
- new (JSON formatted) decomposition file format ('jdec') supporting nested/recursive decompositions
- generic approach to handle cuts and branching constraints in the master problem with no couterpart in the original problem
- created a pricing variable type for variables not corresponding to any original variable, inferred by extended master constraints
- automatic mastervariable synchronization across the entire search tree through history-tracking
- component bound branching rule
- New pricing callback plugin type. This plugin type provides two callback methods for interacting with the GCG pricer.
  The pre-pricing and post-pricing callback methods is called immediately before and after, respectively, new variables
  are generated in the REDCOST and FARKAS pricing methods.
- New heuristic Integer programming column generation (IPColGen). The heuristic is a destroy-and-repair large
  neighbourhood search heuristic. Given a partial solution, the repair procedure generates new columns using a modified
  pricing problem objective.

New/modified/removed structures, defines, and classes:
---------------------------

- added struct 'GCG'
- removed struct 'PARTIALDECOMP_WRAPPER'
- added struct 'PARTIALDECOMP_C' used by the C interface
- added struct 'GCG_INFERREDPRICINGVARDATA'
- added struct 'GCG_PRICINGMODIFICATION'
- added enum 'GCG_EXTENDEDMASTERCONSTYPE'
- added struct 'GCG_EXTENDEDMASTERCONS'
- added struct 'GCG_EXTENDEDMASTERCONSDATA'
- added struct 'GCG_VARHISTORY'
- added struct 'GCG_VARHISTORYBUFFER'
- added type 'GCG_VARTYPE_INFERREDPRICING'
- added a 'MASTER' prefix to the master diving type declarations
- added struct 'GCG_SEPARATORMASTERCUT'